hphp/hack/test/typecheck/array.php.exp
File "array.php", line 5, characters 7-17:
This expression is always false (Typing[4151])
File "array.php", line 3, characters 12-21:
This is a varray and cannot be null
